[package]
name = "json-mask-fields"
version = "0.2.0"
edition = "2021"
description = "select/redact subsets of JSON objects via a Google fields-style query language"
license = "MIT"
repository = "https://github.com/hey-jj/json-mask-fields"
readme = "README.md"
keywords = ["json", "mask", "filter", "fields", "partial-response"]
categories = ["parsing", "data-structures"]

[dependencies]
# preserve_order keeps object keys in insertion order, which the filter relies on
# to emit keys in mask order and to keep wildcard output in data order.
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = "2"

[[bin]]
name = "json-mask-fields"
path = "src/bin/json-mask-fields.rs"
